2001-10-01 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCglue.c: test, if win32api is available for MINGW

2001-10-01 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCsymt.c: no more _modifier in printTypeChain()
	* support/regression/tests/driverstruct.c: REENTRANT for mcs51
	* support/regression/ports/gbz80/spec.mk: removed GENERIC
	* support/regression/ports/host/spec.mk: removed GENERIC
	* support/regression/ports/mcs51/spec.mk: removed GENERIC
	* support/regression/ports/z80/spec.mk: removed GENERIC

2001-10-01    <johan@FRIJA>

	* src/SDCC.y: fixed bug #466586 part 1

2001-10-01  Johan Knol <johan.knol@iduna.nl>

	* SDCCicode.c: z80 has no generic pointers
	* removed -s from strip in all Makefile(.in)'s. It is not needed, but Solaris chocks on it.
	
2001-09-30  Michael Hope  <michaelh@juju.net.nz>

	* sim/ucsim/cmd.src/Makefile.in ($(PRJDIR)/libcmd.a): Changed all ar references to $(AR) for Solaris.

2001-09-29  Michael Hope  <michaelh@juju.net.nz>

	* Makefile (sdcc-libs): Added makebin to the list of standard targets.

	* support/regression/ports/z80/spec.mk: Updated to use env for sdcc bin dir for automatic regression.

2001-09-25  Michael Hope  <michaelh@juju.net.nz>

	* configure.in: Fixed up so that ucsim is only configured once.

	* support/cpp2/configure.in: Fixed to use the program transform to append the .exe for the win32 build.

	* src/SDCCutil.c (getPrefixFromBinPath): Fixed up to work with win32 in all of its glory.
	(getPathDifference): As above.

	* src/SDCCmain.c (preProcess): Changed to use a temporary file in a proper temp directory.  Fixed case where pre-processing only.

	* src/SDCCglue.c (tempfilename): Added function for pre-processor.

2001-09-23  Michael Hope  <michaelh@juju.net.nz>
	* .version: Updated to 2.3.1

	* src/z80/main.c (z80_port =): Added macro based linker and assembler command line support.
	Added copyright header.

	* src/SDCCmain.c: Shifted various functions into SDCCutil.c